haskell-quickcheck1 (1.2.0.0-3) UNRELEASED; urgency=low

  * Add watchfile

 -- Joachim Breitner <nomeata@debian.org>  Sat, 20 Feb 2010 18:51:31 +0100

haskell-quickcheck1 (1.2.0.0-2) unstable; urgency=low

  * Dropped versioned dependency on ghc6-doc from libghc6-quickcheck2-doc

 -- Kari Pahula <kaol@debian.org>  Wed, 03 Jun 2009 20:53:51 +0300

haskell-quickcheck1 (1.2.0.0-1) unstable; urgency=low

  * Initial release.
  * Packaged the old version since its API differs from version 2's and
    people still widely use it.
  * Set to provide, and replace and conflict with earlier versions of
    libghc6-quickcheck-*.
  * Moved .haddock file to avoid conflict with libghc6-quickcheck-doc.

 -- Kari Pahula <kaol@debian.org>  Fri, 13 Mar 2009 21:46:38 +0200