@@ -1,15 +1,28 @@
 Source: haskell-quickcheck1
 Section: haskell
 Priority: optional
-Maintainer: Kari Pahula <kaol@debian.org>
-Standards-Version: 3.8.1
-Build-Depends: debhelper (>= 5), haddock (>= 2.4.2), hscolour, ghc6, ghc6-prof, ghc6-doc, haskell-devscripts, cdbs
+Maintainer: Debian Haskell Group <pkg-haskell-maintainers@lists.alioth.debian.org>
+Uploaders: Joachim Breitner <nomeata@debian.org>
+Standards-Version: 3.8.4
+Build-Depends:
+ haskell-devscripts,
+ cdbs,
+ debhelper (>= 7),
+ ghc6,
+ ghc6-prof,
+ ghc6-doc,
+Homepage: http://hackage.haskell.org/package/QuickCheck
+Vcs-Darcs: http://darcs.debian.org/pkg-haskell/haskell-quickcheck1
+Vcs-Browser: http://darcs.debian.org/cgi-bin/darcsweb.cgi?r=pkg-haskell/haskell-quickcheck1
 
 Package: libghc6-quickcheck1-dev
 Architecture: any
-Depends: ${haskell:Depends}, ${shlibs:Depends}, ${misc:Depends}
-Suggests: libghc6-quickcheck1-prof, libghc6-quickcheck1-doc
-Provides: libghc6-quickcheck-dev
+Depends: ${haskell:Depends}
+  , ${shlibs:Depends}
+  , ${misc:Depends}
+Recommends: ${haskell:Recommends}
+Suggests: ${haskell:Suggests}
+Provides: ${haskell:Provides}, libghc6-quickcheck-dev
 Conflicts: libghc6-quickcheck-dev (<< 2.1.0.1-6)
 Replaces: libghc6-quickcheck-dev (<< 2.1.0.1-6)
 Description: Haskell automatic testing library for GHC
@@ -29,8 +42,10 @@ Description: Haskell automatic testing library for GHC
 
 Package: libghc6-quickcheck1-prof
 Architecture: any
-Depends: ${haskell:Depends}, ${shlibs:Depends}, ${misc:Depends}, libghc6-quickcheck1-dev (= ${binary:Version})
-Provides: libghc6-quickcheck-prof
+Depends: ${haskell:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Recommends: ${haskell:Recommends}
+Suggests: ${haskell:Suggests}
+Provides: libghc6-quickcheck-prof, ${haskell:Provides}
 Conflicts: libghc6-quickcheck-prof (<< 2.1.0.1-6)
 Replaces: libghc6-quickcheck-prof (<< 2.1.0.1-6)
 Description: Haskell automatic testing library for GHC; profiling libraries
@@ -53,8 +68,8 @@ Package: libghc6-quickcheck1-doc
 Section: doc
 Architecture: all
 Depends: ${haskell:Depends}, ${shlibs:Depends}, ${misc:Depends}
-Suggests: libghc6-quickcheck1-dev, libghc6-quickcheck1-prof
-Recommends: ghc6-doc
+Recommends: ${haskell:Recommends}
+Suggests: ${haskell:Suggests}
 Provides: libghc6-quickcheck-doc
 Conflicts: libghc6-quickcheck-doc (<< 2.1.0.1-6)
 Replaces: libghc6-quickcheck-doc (<< 2.1.0.1-6)
