@@ -1,9 +1,6 @@
 #!/usr/bin/make -f
 
-#DEB_SETUP_GHC6_CONFIGURE_ARGS := --constraint='base<4'
-
 DEB_CABAL_PACKAGE=quickcheck1
-DEB_HADDOCK_DIR=/usr/share/ghc6-doc/ghc-$(shell ghc --numeric-version)/haddock/quickcheck1/
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/hlibrary.mk
