@@ -1,6 +1,7 @@
 haskell-quickcheck1 (1.2.0.0-3) UNRELEASED; urgency=low
 
   * Add watchfile
+  * Adopt by the Debian Haskell Group
 
  -- Joachim Breitner <nomeata@debian.org>  Sat, 20 Feb 2010 18:51:31 +0100
 
